# Relay

./: .env-example  .env.example  .gitignore  .prettierrc  API.DOCS.README.md  API_DOCS.README.md  LICENSE.md  NAV.API.DOCS.README.md  README.md  SOCKETIO.DOCS.README.md  database.sqlite  hardware.json  nav2_setup.sh  package.json  swagger.options.js  tsconfig.json
DEVELOPER_GUIDE/: LOGGING.DOCS.README.md  NAV.API.DOCS.README.md  ROS_HTTP_FRAMEWORK.README.md  SOCKETIO.DOCS.README.md
src/: expressServer.js  index.js  index.ts  websocketServer.js  wsInit.js
src/api/v1/: routes.js  servo-routes.js  swagger.errors.yaml  ultrasonic-router.js  wheelchair-router.js
src/api/v1/.ir/: routes.js  (+2 more)
src/api/v1/smart-home/testing/ros-ws/src/sanad_interfaces/: CMakeLists.txt  package.xml
src/api/v1/smart-home/testing/ros-ws/src/sanad_interfaces/msg/: SmartDeviceEvent.msg
src/api/v1/smart-home/testing/ros-ws/src/sanad_interfaces/srv/: Device.srv  DeviceControl.srv  Discover.srv
src/api/v1/smart-home/testing/ros-ws/src/smart_home_agents/: package.xml  setup.cfg  setup.py
src/api/v1/smart-home/testing/ros-ws/src/smart_home_agents/smart_home_agents/: client_node.py  subscriber_node.py
src/api/v1/smart-home/testing/sanad_interfaces/: CMakeLists.txt  package.xml
src/api/v1/smart-home/testing/sanad_interfaces/msg/: Device.msg  DeviceEvent.msg  Room.msg  RoomEvent.msg
src/api/v1/smart-home/testing/sanad_interfaces/srv/: GetAllDevices.srv  GetAllRooms.srv  GetDevice.srv  GetRoom.srv  RegisterDevice.srv  UpdateRoom.srv
src/core/: expressServer.ts  registry.ts  rosExecuter.ts  rosMapper.ts  rosStateManager.ts  server.ts  websocketServer.ts
src/core/types/: Ros.types.ts  Routes.types.ts  express.types.ts  module.types.ts  server.types.ts  wsCallback.types.ts  zod.types.ts
src/db/: configuration.js  datasources.js  db.repositories.js
src/db/entity/: devices.entity.js  rooms.entity.js  salutations.schema.ts  users.entity.js
src/lib/: connection.js
src/middleware/: global.error.handler.middleware.js  global.error.handler.middleware.ts  rosInjector.middleware.ts  validation.middleware.ts  validationMiddleware.js
src/servers/: apiRegistry.js  callbackRegistry.js  expressServer.js  registry.js  routerRegistry.js  server.js  websocketServer.js
src/utils/: broadcast-interfaces.js  controller.wrapper.js  logger.js  timestamp.js
(+117 files in other folders)
