<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_home_agents</name>
  <version>0.0.0</version>
  <description>ROS 2 package for interfacing with the Smart Home server</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sanad_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
